WIP moving references on the Principles page to BibTeX

--- a/guides/references.bib
+++ b/guides/references.bib
@@ -1,6 +1,107 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+%% Created for Chat at 2017-12-30 17:51:31 +0100 
+
+
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Gelman2002,
+	Author = {Andrew Gelman and Cristian Pasarica and Rahul Dodhia},
+	Date-Added = {2017-12-30 16:51:22 +0000},
+	Date-Modified = {2017-12-30 16:51:30 +0000},
+	Doi = {10.1198/000313002317572790},
+	Eprint = {https://doi.org/10.1198/000313002317572790},
+	Journal = {The American Statistician},
+	Number = {2},
+	Pages = {121-130},
+	Publisher = {Taylor & Francis},
+	Title = {Let's Practice What We Preach},
+	Url = {https://doi.org/10.1198/000313002317572790},
+	Volume = {56},
+	Year = {2002},
+	Bdsk-Url-1 = {https://doi.org/10.1198/000313002317572790}}
+
+@article{Fisher1955,
+	Author = {Fisher, Ronald},
+	Date-Added = {2017-12-30 16:50:26 +0000},
+	Date-Modified = {2017-12-30 16:50:33 +0000},
+	Journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+	Pages = {69--78},
+	Publisher = {JSTOR},
+	Title = {Statistical methods and scientific induction},
+	Year = {1955}}
+
+@article{Ehrenberg1977,
+	Author = {Ehrenberg, ASC},
+	Date-Added = {2017-12-30 16:49:51 +0000},
+	Date-Modified = {2017-12-30 16:49:57 +0000},
+	Journal = {Journal of the Royal Statistical Society. Series A (General)},
+	Pages = {277--297},
+	Publisher = {JSTOR},
+	Title = {Rudiments of numeracy},
+	Year = {1977}}
+
+@article{Earp2015,
+	Author = {Earp, Brian D and Trafimow, David},
+	Date-Added = {2017-12-30 16:48:50 +0000},
+	Date-Modified = {2017-12-30 16:48:57 +0000},
+	Journal = {Frontiers in psychology},
+	Publisher = {Frontiers Media SA},
+	Title = {Replication, falsification, and the crisis of confidence in social psychology},
+	Volume = {6},
+	Year = {2015}}
+
+@misc{Dragicevic2017,
+	Author = {Pierre Dragicevic},
+	Date-Added = {2017-12-30 16:46:02 +0000},
+	Date-Modified = {2017-12-30 16:47:52 +0000},
+	Howpublished = {Recorded seminar, GRICAD, Grenoble.},
+	Title = {Statistical Dances: Why no Statistical Analysis is Reliable and What to do About it.},
+	Year = {2017}}
+
+@incollection{Dragicevic2016,
+	Annote = {In press},
+	Author = {Dragicevic, Pierre},
+	Booktitle = {Modern Statistical Methods for HCI},
+	Date-Added = {2017-12-30 16:44:48 +0000},
+	Date-Modified = {2017-12-30 16:44:55 +0000},
+	Editor = {Robertson, J and Kaptein, M C},
+	Publisher = {Springer},
+	Title = {{Fair Statistical Communication in HCI}},
+	Year = {2016}}
+
+@article{Dixon2003,
+	Author = {Dixon, Peter},
+	Date-Added = {2017-12-30 16:43:29 +0000},
+	Date-Modified = {2017-12-30 16:43:37 +0000},
+	Journal = {Canadian Journal of Experimental Psychology/Revue canadienne de psychologie exp{\'e}rimentale},
+	Number = {3},
+	Pages = {189--202},
+	Title = {{The p-value fallacy and how to avoid it.}},
+	Volume = {57},
+	Year = {2003}}
+
+@article{Cohen1994,
+	Author = {Cohen, Jacob},
+	Date-Added = {2017-12-30 16:39:16 +0000},
+	Date-Modified = {2017-12-30 16:39:26 +0000},
+	Journal = {The American psychologist},
+	Number = {12},
+	Pages = {997--1003},
+	Title = {{The earth is round (p < .05).}},
+	Volume = {49},
+	Year = {1994}}
+
+@inproceedings{Cockburn2018,
+	Author = {Andy Cockburn and Carl Gutwin and Alan Dix},
+	Booktitle = {CHI '18:Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems},
+	Date-Added = {2017-12-30 16:30:19 +0000},
+	Date-Modified = {2017-12-30 16:32:41 +0000},
+	Title = {HARK no more: on the preregistration of CHI experiments},
+	Year = {2018}}
 
 @article{Olejnik2003,
 	Author = {Stephen Olejnik and James Algina},
@@ -68,29 +169,29 @@
 	Title = {{Arguments for and Against Standardized Mean Differences (Effect Sizes)}},
 	Url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve{\&}db=PubMed{\&}dopt=Citation{\&}list{\_}uids=21727271 http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
 	Volume = {165},
-	Year = {2011}}
+	Year = {2011},
+	Bdsk-Url-1 = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve%7B%5C&%7Ddb=PubMed%7B%5C&%7Ddopt=Citation%7B%5C&%7Dlist%7B%5C_%7Duids=21727271%20http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
+	Bdsk-Url-2 = {https://dx.doi.org/10.1001/archpediatrics.2011.97}}
 
 @article{loftus1993picture,
-  title={A picture is worth a thousandp values: On the irrelevance of hypothesis testing in the microcomputer age},
-  author={Loftus, Geoffrey R},
-  journal={Behavior Research Methods, Instruments, \& Computers},
-  volume={25},
-  number={2},
-  pages={250--256},
-  year={1993},
-  publisher={Springer}
-}
+	Author = {Loftus, Geoffrey R},
+	Journal = {Behavior Research Methods, Instruments, \& Computers},
+	Number = {2},
+	Pages = {250--256},
+	Publisher = {Springer},
+	Title = {A picture is worth a thousandp values: On the irrelevance of hypothesis testing in the microcomputer age},
+	Volume = {25},
+	Year = {1993}}
 
 @article{kastellec2007using,
-  title={Using graphs instead of tables in political science},
-  author={Kastellec, Jonathan P and Leoni, Eduardo L},
-  journal={Perspectives on politics},
-  volume={5},
-  number={04},
-  pages={755--771},
-  year={2007},
-  publisher={Cambridge Univ Press}
-}
+	Author = {Kastellec, Jonathan P and Leoni, Eduardo L},
+	Journal = {Perspectives on politics},
+	Number = {04},
+	Pages = {755--771},
+	Publisher = {Cambridge Univ Press},
+	Title = {Using graphs instead of tables in political science},
+	Volume = {5},
+	Year = {2007}}
 
 @incollection{Cohen1977,
 	Author = {Cohen, Jacob},
@@ -101,60 +202,62 @@
 	Publisher = {Academic Press},
 	Title = {{The t Test for Means}},
 	Url = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
-	Year = {1977}}
+	Year = {1977},
+	Bdsk-Url-1 = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
+	Bdsk-Url-2 = {https://dx.doi.org/10.1016/B978-0-12-179060-8.50007-4}}
 
 @article{Baguley2004,
-  author = {Baguley, Thom},
-  doi = {10.1016/j.apergo.2004.01.002},
-  journal = {Applied Ergonomics},
-  keywords = {Applied research,Experimental design,Statistical power},
-  number = {2},
-  pages = {73--80},
-  pmid = {15105068},
-  title = {{Understanding statistical power in the context of applied research}},
-  volume = {35},
-  year = {2004}
-}
+	Author = {Baguley, Thom},
+	Doi = {10.1016/j.apergo.2004.01.002},
+	Journal = {Applied Ergonomics},
+	Keywords = {Applied research,Experimental design,Statistical power},
+	Number = {2},
+	Pages = {73--80},
+	Pmid = {15105068},
+	Title = {{Understanding statistical power in the context of applied research}},
+	Volume = {35},
+	Year = {2004},
+	Bdsk-Url-1 = {https://dx.doi.org/10.1016/j.apergo.2004.01.002}}
 
 @article{Lenth2001,
-  author = {Lenth, Russel V},
-  doi = {10.1198/000313001317098149},
-  journal = {The American Statistician},
-  keywords = {cohen's effect measures,confidence-bounds,equivalence testing,observed power,power,retrospective power,study design},
-  number = {3},
-  pages = {187--193},
-  title = {{Some practical guidelines for effective sample size determination}},
-  volume = {55},
-  year = {2001}
-}
+	Author = {Lenth, Russel V},
+	Doi = {10.1198/000313001317098149},
+	Journal = {The American Statistician},
+	Keywords = {cohen's effect measures,confidence-bounds,equivalence testing,observed power,power,retrospective power,study design},
+	Number = {3},
+	Pages = {187--193},
+	Title = {{Some practical guidelines for effective sample size determination}},
+	Volume = {55},
+	Year = {2001},
+	Bdsk-Url-1 = {https://dx.doi.org/10.1198/000313001317098149}}
 
 @article{Baguley2009,
-  author = {Baguley, Thom},
-  doi = {10.1348/000712608X377117},
-  journal = {British journal of psychology},
-  number = {3},
-  pages = {603--617},
-  title = {{Standardized or simple effect size: what should be reported?}},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/19017432},
-  volume = {100},
-  year = {2009}
-}
+	Author = {Baguley, Thom},
+	Doi = {10.1348/000712608X377117},
+	Journal = {British journal of psychology},
+	Number = {3},
+	Pages = {603--617},
+	Title = {{Standardized or simple effect size: what should be reported?}},
+	Url = {http://www.ncbi.nlm.nih.gov/pubmed/19017432},
+	Volume = {100},
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.ncbi.nlm.nih.gov/pubmed/19017432},
+	Bdsk-Url-2 = {https://dx.doi.org/10.1348/000712608X377117}}
 
 @book{APA2001,
-  author = {{American Psychological Association}},
-  edition = {5th Editio},
-  isbn = {1557987904},
-  pages = {400},
-  title = {{Publication Manual of the American Psychological Association}},
-  year = {2001}
-}
+	Author = {{American Psychological Association}},
+	Edition = {5th Editio},
+	Isbn = {1557987904},
+	Pages = {400},
+	Title = {{Publication Manual of the American Psychological Association}},
+	Year = {2001}}
 
 @article{Sauro2010,
-  author = {Sauro, Jeff and Lewis, James R.},
-  doi = {10.1145/1753326.1753679},
-  journal = {Proceedings of the 28th international conference on Human factors in computing systems - CHI '10},
-  title = {{Average task times in usability tests}},
-  url = {http://portal.acm.org/citation.cfm?doid=1753326.1753679},
-  year = {2010}
-}
-
+	Author = {Sauro, Jeff and Lewis, James R.},
+	Doi = {10.1145/1753326.1753679},
+	Journal = {Proceedings of the 28th international conference on Human factors in computing systems - CHI '10},
+	Title = {{Average task times in usability tests}},
+	Url = {http://portal.acm.org/citation.cfm?doid=1753326.1753679},
+	Year = {2010},
+	Bdsk-Url-1 = {http://portal.acm.org/citation.cfm?doid=1753326.1753679},
+	Bdsk-Url-2 = {https://dx.doi.org/10.1145/1753326.1753679}}
