--- a/guides/pvalues.Rmd
+++ b/guides/pvalues.Rmd
@@ -1,1 +1,3 @@
 # p values {#pvalues}
+
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1Qn-aNgOlQhbY4v3anI1EuX9PDOzETLGzg1QZmjxvgpM)
