Added links to draft Google Doc

--- a/guides/likert.Rmd
+++ b/guides/likert.Rmd
@@ -1,1 +1,4 @@
 # Likert-scale data {#likert}
+
+
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/13EU5DZhAOoCCBkEBGhfrr99UN4okxVgM1MYhlbzk_Dg/edit)
