--- a/guides/planning.Rmd
+++ b/guides/planning.Rmd
@@ -1,1 +1,3 @@
 # Experiment and analysis planning {#planning}
+
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1Qyp3WbFuD-99PttCo4ZPNHwlDs5cqMYL_YB8EWAful0/edit)
