--- a/guides/transformation.Rmd
+++ b/guides/transformation.Rmd
@@ -1,1 +1,3 @@
 # Data transformation {#transformation}
+
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1ZmtMWnSi_4OqVxiP85Obyu6ddbzYP_p-HIqzmCyc_3s/edit#heading=h.ijmbziunc7d8)
