--- a/guides/bayesian.Rmd
+++ b/guides/bayesian.Rmd
@@ -1,1 +1,3 @@
 # Bayesian inference {#bayesian}
+
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1FI-6Bb5pTCNm84xFfpaeoPdbwVTYtfmeAdOkiKIIJ7Q/edit)
