--- a/guides/references.bib
+++ b/guides/references.bib
@@ -141,7 +141,8 @@
 	Howpublished = {\url{https://tinyurl.com/gricad-dance}},
 	Note = {Recorded seminar, GRICAD, Grenoble. (2017)},
 	Title = {Statistical Dances: Why no Statistical Analysis is Reliable and What to do About it},
-	Url = {https://tinyurl.com/gricad-dance}}
+	Url = {https://tinyurl.com/gricad-dance},
+	Year= {2017}}
 
 @article{Earp2015,
 	Author = {Earp, Brian D and Trafimow, David},
@@ -328,7 +329,7 @@
 	Date-Modified = {2017-12-30 17:59:20 +0000},
 	Howpublished = {\url{http://daniellakens.blogspot.fr/2016/07/dance-of-bayes-factors.html}},
 	Note = {Online, last accessed: 2017-12-29},
-	Title = {Dance the Bayes factors},
+	Title = {Dance of the Bayes factors},
 	Url = {http://daniellakens.blogspot.fr/2016/07/dance-of-bayes-factors.html},
 	Year = {2016}}
 
