--- a/guides/likert.Rmd
+++ b/guides/likert.Rmd
@@ -1,4 +1,8 @@
 # Likert-scale data {#likert}
 
-
-This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/13EU5DZhAOoCCBkEBGhfrr99UN4okxVgM1MYhlbzk_Dg/edit)
+<mark>
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/13EU5DZhAOoCCBkEBGhfrr99UN4okxVgM1MYhlbzk_Dg/edit).
+We welcome help and feedback at all levels!
+If you would like to contribute, please see
+[Contributing to the Guidelines](https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines).
+</mark>
