--- a/guides/effectsize_exemplar_standardized.Rmd
+++ b/guides/effectsize_exemplar_standardized.Rmd
@@ -1,5 +1,11 @@
 ## Exemplar: Standardized effect size {#effectsize_exemplar_standardized}
 
+<mark>
+This section is in *alpha*. We welcome help and feedback at all levels!
+If you would like to contribute, please see
+[Contributing to the Guidelines](https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines).
+</mark>
+
 ```
 TODO: This needs a domain where we can argue that Cohen's d is an exemplar analysis, then repeat structure of exemplar 1 with it
 May be an example of existing meta-analysis in HCI.
