--- a/guides/transformation.Rmd
+++ b/guides/transformation.Rmd
@@ -1,3 +1,8 @@
 # Data transformation {#transformation}
 
-This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1ZmtMWnSi_4OqVxiP85Obyu6ddbzYP_p-HIqzmCyc_3s/edit#heading=h.ijmbziunc7d8)
+<mark>
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1ZmtMWnSi_4OqVxiP85Obyu6ddbzYP_p-HIqzmCyc_3s/edit#heading=h.ijmbziunc7d8).
+We welcome help and feedback at all levels!
+If you would like to contribute, please see
+[Contributing to the Guidelines](https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines).
+</mark>
